--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,9 @@
 .link{
     text-decoration: none;
     display: block;
+transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
@@ -86,15 +89,46 @@
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
+    transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .studio-link:hover {
     color: #404bbf; 
+
 }
 
 .studio-link:focus {
     color: #404bbf; 
+ 
 }
 
+*
+::before,
+::after {
+  box-sizing: border-box;
+  margin: 0;
+}
+
+.hero-nav-bar::after {
+    content: "";
+
+        width: 100%;
+        height: 4px;
+        border-radius: 2px;
+        position: absolute;
+        bottom: -1px;
+        left: 0;
+        background-color: #404bbf;
+      
+      }
+      
+      .hero-nav-bar{
+        position: relative;
+        color: #404bbf;
+
+}
 
 .nav-meniu{
     display: flex;
@@ -128,7 +162,10 @@
     font-size: 16px;
     font-weight: 500px;
    color: #434455;
-
+   transition-property: background-color;
+   transition-duration: 250ms;
+   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   
 }
 
 
@@ -204,6 +241,10 @@ height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .socialmedialink:hover,
 .socialmedialink:focus {
@@ -272,13 +313,15 @@ height: 40px;
 }
 
 
-
-
 .filter{
     display: flex;
     justify-content: center;
     gap: 24px;
     margin-bottom: 72px;
+    transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .filter:hover {
@@ -305,6 +348,10 @@ body{
     border: none;
     border-radius: 4px;
     margin: auto;
+    transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .button:hover {
@@ -337,6 +384,10 @@ body{
     color: #4d5ae5;
     padding: 12px 24px;
     border: 1px solid var(--background-color-container, #e7e9fc);
+    transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
     border-radius: 4px;
 }
 .button-filter:hover {
@@ -443,6 +494,7 @@ gap: 24px;
 
 .doing {
     padding-bottom: 120px;
+
 }
 
 .doing-list{
@@ -498,6 +550,10 @@ width: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: #8e8f99;
+  transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 .cusomersicons:hover {
   border-color: #404bbf; 
@@ -550,6 +606,10 @@ margin-bottom: 16px;
   display: flex;
   align-items: center;
   justify-content: center;
+  transition-property: background-color;
+transition-duration: 250ms;
+transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
 
 }
 
@@ -557,3 +617,49 @@ margin-bottom: 16px;
 .socialmedialinkfooter:focus {
   background-color: #31d0aa;
 }
+
+
+* {
+    box-sizing: border-box;
+  }
+
+.box {
+    position: relative;
+    overflow: hidden;
+
+    height: 300px;
+    margin: 0 auto;
+   
+  }
+  
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #3f51b5;
+  
+    transform: translatey(100%);
+    transition: transform 250ms ease-in-out;
+  }
+  
+  .box:hover .overlay {
+    transform: translatey(0);
+  }
+  
+  .overlay p {
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+    color: #F4F4FD;
+    max-width: 296px;
+  padding-left: 32px;
+  padding-top: 40px;
+text-align: justify;
+  
+  }
+
