--- a/css/styles.css
+++ b/css/styles.css
@@ -89,9 +89,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     letter-spacing: 0.02em;
     color: #2e2f42;
     padding: 24px 0;
-    transition-property: background-color;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .studio-link:hover {
@@ -163,9 +161,7 @@ transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     font-weight: 500px;
    color: #434455;
    transition-property: background-color;
-   transition-duration: 250ms;
-   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-   
+   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 
@@ -550,9 +546,8 @@ width: 100%;
   border: 1px solid #8e8f99;
   border-radius: 4px;
   color: #8e8f99;
-  transition-property: background-color;
-transition-duration: 250ms;
-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .cusomersicons:hover {
@@ -671,8 +666,7 @@ text-align: justify;
     width: 100%;
     height: 100%;
     background-color: rgba(46, 47, 66, 0.4);
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
   
   .is-hidden {
