--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,6 @@
 
 .hero-nav-bar::after {
     content:"";
-
         width: 100%;
         height: 4px;
         border-radius: 2px;
@@ -119,6 +118,7 @@
         bottom: -1px;
         left: 0;
         background-color: #404bbf;
+        display: block;
       
       }
       
